# mach

./: .gitignore  LICENSE.md  README.md  install.sh  pyproject.toml  uninstall.sh
src/mach/: __init__.py  auth.py  cli.py  config.py  db.py  git_utils.py  ingest.py  locking.py  merkle.py  models.py  repository.py  sdk.py  session.py  tracker.py  tui.py  ui.py  utils.py
src/mach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mach/hooks/: __init__.py  base.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  helpers.py  manager.py
