[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mach"
version = "0.1.0"
description = "Local-first execution tracking for AI agents."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
mach = "mach.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
